--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ FtApi = "^2.2.3"
 matplotlib = "^3.5.0"
 python-dotenv = "^0.19.2"
 pandas = "^1.3.5"
+rich = "^10.16.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.11b1"
